@@ -58,6 +58,12 @@ class OBJECT_PT_ByGenModify(Panel):
             colrow = col.row(align=True)
             colrow.prop(bytool, "mode_mod_disp", text="")
 
+        if bytool.mode_modify == "MODE_HSSOLID":
+            colrow = col.row(align = True)
+            colrow.prop(bytool, "mod_hssolid_allow_mirror")
+            colrow = col.row(align = True)
+            colrow.operator("object.bygen_invert_solidify")
+
         if bytool.mode_modify == "MODE_HSF":
             colrow = col.row(align=True)
             colrow.separator()
